# object-detection-and-classification

./: .gitignore  CMakeLists.txt  Makefile  README.MD
Object detection and classification/: main.cpp
Object detection and classification.xcodeproj/: project.pbxproj
Object detection and classification.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Object detection and classification.xcodeproj/xcuserdata/kanales.xcuserdatad/xcschemes/: xcschememanagement.plist
model/: tree_0.RandomForest  tree_1.RandomForest  tree_10.RandomForest  tree_100.RandomForest  tree_101.RandomForest  tree_102.RandomForest  tree_103.RandomForest  tree_104.RandomForest  tree_105.RandomForest  tree_106.RandomForest  tree_107.RandomForest  tree_108.RandomForest  tree_109.RandomForest  tree_11.RandomForest  tree_110.RandomForest  tree_111.RandomForest  tree_112.RandomForest  tree_113.RandomForest  tree_114.RandomForest  tree_115.RandomForest  tree_116.RandomForest  tree_117.RandomForest  tree_118.RandomForest  tree_119.RandomForest  tree_12.RandomForest  tree_120.RandomForest  tree_121.RandomForest  tree_122.RandomForest  tree_123.RandomForest  tree_124.RandomForest  tree_125.RandomForest  tree_126.RandomForest  tree_127.RandomForest  tree_128.RandomForest  tree_129.RandomForest  tree_13.RandomForest  tree_130.RandomForest  tree_131.RandomForest  tree_132.RandomForest  tree_133.RandomForest  (+960 more)
object-detection-and-classification.xcodeproj/: project.pbxproj
src/: DataLoader.cpp  DataLoader.h  ObjectDetector.cpp  ObjectDetector.h  ProgressBar.h  RandomForest.cpp  RandomForest.hpp  config.h  hog_visualization.cpp  hog_visualization.h  main.cpp  progress.h  random_forest.h  task1.cpp  task1.h  task1.hpp  task2.cpp  task2.h  task3.cpp  task3.h  utils.cpp  utils.h
